[package]
name = "hitsuki"
version = "0.1.0"
edition = "2021"
authors = ["Elliott A."]
description = "Hitsuki is a commandline tool for dynamic time based wallpapers in x11 based window managers. It is written in rust and uses the feh to interact with the x11 server and set the background."
documentation = "https://github.com/Aethar01/hitsuki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
confy = "0.5.1"
dirs = "5.0.1"
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
timer = "0.2.0"
toml = "0.7.4"
which = "4.4.0"
